# grib2zarr

./: .gitignore  Containerfile  README.md  config.yaml  config_parser.py  grib2zarr.py  pyproject.toml  rechunk.py  requirements.txt  s3_store.py  test_grib2zarr.py
grib2zarr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
