[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grib2zarr"
version = "0.1.0"
description = "Extract parameters from GRIB2 files and store them in Zarr format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eccodes>=2.30.0",
    "xarray>=2023.1.0",
    "zarr>=2.14.0",
    "dask[array]>=2023.1.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.scripts]
grib2zarr = "grib2zarr:cli"

[tool.setuptools]
py-modules = ["grib2zarr", "config_parser", "rechunk"]
