[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grib2zarr"
version = "0.1.0"
description = "Extract parameters from GRIB2 files and store them in Zarr format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eccodes>=2.30.0",
    "xarray>=2026.2.0",
    "zarr>=3.1.6",
    "dask[array]>=2023.1.0",
    "numpy>=2.4.4",
    "pyyaml>=6.0",
    "s3fs>=2026.3.0",
    "pyproj>=3.0.0",
]

[project.scripts]
grib2zarr = "grib2zarr:cli"
rechunk2zarr = "rechunk:cli"

[tool.setuptools]
py-modules = ["grib2zarr", "config_parser", "rechunk", "s3_store"]
